{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 1180,
  "lineage": "964f9647-efbf-554c-b6fd-8c59f22354c7",
  "resources": [
    {
      "module": "module.monitoring-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "monitoring-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053a0835435bf4f45",
            "arn": "arn:aws:ec2:ap-south-2:740956705458:instance/i-0e04f41173f66c53c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e04f41173f66c53c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "akshay",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c3348b7efe984701",
            "private_dns": "ip-10-0-1-193.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.193",
            "public_dns": "ec2-40-192-100-30.ap-south-2.compute.amazonaws.com",
            "public_ip": "40.192.100.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-005b2ef796f82129e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e1a6c6030c7470ef",
            "tags": {
              "Name": "monitoring-ec2"
            },
            "tags_all": {
              "Name": "monitoring-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a9f2c2d7badc17b3"
            ]
          },
          "dependencies": [
            "module.monitoring-ec2.aws_security_group.monitoring-sg",
            "module.vpc.aws_subnet.net-public-subnet",
            "module.vpc.aws_vpc.net-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.monitoring-ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "monitoring-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:740956705458:security-group/sg-0a9f2c2d7badc17b3",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a9f2c2d7badc17b3",
            "ingress": [],
            "name": "monitoring-sg",
            "name_prefix": "",
            "owner_id": "740956705458",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "monitoring-sg"
            },
            "tags_all": {
              "Name": "monitoring-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0acbe97d3a79c876c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.net-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.monitoring-ec2",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "monitoring-sg-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:740956705458:security-group-rule/sgr-0a063a08cd63d3471",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-0a063a08cd63d3471",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a9f2c2d7badc17b3",
            "security_group_rule_id": "sgr-0a063a08cd63d3471",
            "tags": null,
            "tags_all": {},
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.monitoring-ec2.aws_security_group.monitoring-sg",
            "module.vpc.aws_vpc.net-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.monitoring-ec2",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "monitoring-sg-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "22",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:740956705458:security-group-rule/sgr-066e51fc94a6b52b8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-066e51fc94a6b52b8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a9f2c2d7badc17b3",
            "security_group_rule_id": "sgr-066e51fc94a6b52b8",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.monitoring-ec2.aws_security_group.monitoring-sg",
            "module.vpc.aws_vpc.net-vpc"
          ]
        },
        {
          "index_key": "3000",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:740956705458:security-group-rule/sgr-0dc3078f2e35e4732",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3000,
            "id": "sgr-0dc3078f2e35e4732",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a9f2c2d7badc17b3",
            "security_group_rule_id": "sgr-0dc3078f2e35e4732",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.monitoring-ec2.aws_security_group.monitoring-sg",
            "module.vpc.aws_vpc.net-vpc"
          ]
        },
        {
          "index_key": "443",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:740956705458:security-group-rule/sgr-08405dafea4cad01d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-08405dafea4cad01d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a9f2c2d7badc17b3",
            "security_group_rule_id": "sgr-08405dafea4cad01d",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.monitoring-ec2.aws_security_group.monitoring-sg",
            "module.vpc.aws_vpc.net-vpc"
          ]
        },
        {
          "index_key": "80",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:740956705458:security-group-rule/sgr-055c52044af7509cf",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-055c52044af7509cf",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a9f2c2d7badc17b3",
            "security_group_rule_id": "sgr-055c52044af7509cf",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.monitoring-ec2.aws_security_group.monitoring-sg",
            "module.vpc.aws_vpc.net-vpc"
          ]
        },
        {
          "index_key": "9090",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:740956705458:security-group-rule/sgr-0cdc8c7069c870eac",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 9090,
            "id": "sgr-0cdc8c7069c870eac",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a9f2c2d7badc17b3",
            "security_group_rule_id": "sgr-0cdc8c7069c870eac",
            "tags": null,
            "tags_all": {},
            "to_port": 9090
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.monitoring-ec2.aws_security_group.monitoring-sg",
            "module.vpc.aws_vpc.net-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.netflix-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "net-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053a0835435bf4f45",
            "arn": "arn:aws:ec2:ap-south-2:740956705458:instance/i-0909adf99bf169611",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0909adf99bf169611",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "akshay",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a1f9210d1464ffc5",
            "private_dns": "ip-10-0-1-41.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.41",
            "public_dns": "ec2-18-61-74-119.ap-south-2.compute.amazonaws.com",
            "public_ip": "18.61.74.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02cd8c292d0403d3c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e1a6c6030c7470ef",
            "tags": {
              "Name": "netflix-ec2"
            },
            "tags_all": {
              "Name": "netflix-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fb792e2324ae4a83"
            ]
          },
          "dependencies": [
            "module.netflix-ec2.aws_security_group.net-sg",
            "module.vpc.aws_subnet.net-public-subnet",
            "module.vpc.aws_vpc.net-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.netflix-ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "net-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:740956705458:security-group/sg-0fb792e2324ae4a83",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0fb792e2324ae4a83",
            "ingress": [],
            "name": "net-sg",
            "name_prefix": "",
            "owner_id": "740956705458",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0acbe97d3a79c876c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.net-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.netflix-ec2",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "net-sg-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:740956705458:security-group-rule/sgr-04ec0f20a521bbac0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-04ec0f20a521bbac0",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fb792e2324ae4a83",
            "security_group_rule_id": "sgr-04ec0f20a521bbac0",
            "tags": null,
            "tags_all": {},
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.netflix-ec2.aws_security_group.net-sg",
            "module.vpc.aws_vpc.net-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.netflix-ec2",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "net-sg-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "22",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:740956705458:security-group-rule/sgr-04fccb3e70941d3db",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-04fccb3e70941d3db",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fb792e2324ae4a83",
            "security_group_rule_id": "sgr-04fccb3e70941d3db",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.netflix-ec2.aws_security_group.net-sg",
            "module.vpc.aws_vpc.net-vpc"
          ]
        },
        {
          "index_key": "443",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:740956705458:security-group-rule/sgr-01393eb65eb429ce8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-01393eb65eb429ce8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fb792e2324ae4a83",
            "security_group_rule_id": "sgr-01393eb65eb429ce8",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.netflix-ec2.aws_security_group.net-sg",
            "module.vpc.aws_vpc.net-vpc"
          ]
        },
        {
          "index_key": "80",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:740956705458:security-group-rule/sgr-0547e5cc437369bc6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0547e5cc437369bc6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fb792e2324ae4a83",
            "security_group_rule_id": "sgr-0547e5cc437369bc6",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.netflix-ec2.aws_security_group.net-sg",
            "module.vpc.aws_vpc.net-vpc"
          ]
        },
        {
          "index_key": "8080",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:740956705458:security-group-rule/sgr-0690c3e3adb9d5c94",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-0690c3e3adb9d5c94",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fb792e2324ae4a83",
            "security_group_rule_id": "sgr-0690c3e3adb9d5c94",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.netflix-ec2.aws_security_group.net-sg",
            "module.vpc.aws_vpc.net-vpc"
          ]
        },
        {
          "index_key": "9000",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:740956705458:security-group-rule/sgr-0c6ec2445335ff35a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 9000,
            "id": "sgr-0c6ec2445335ff35a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fb792e2324ae4a83",
            "security_group_rule_id": "sgr-0c6ec2445335ff35a",
            "tags": null,
            "tags_all": {},
            "to_port": 9000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.netflix-ec2.aws_security_group.net-sg",
            "module.vpc.aws_vpc.net-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "net-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:740956705458:internet-gateway/igw-0c00d798147fe6389",
            "id": "igw-0c00d798147fe6389",
            "owner_id": "740956705458",
            "tags": {
              "Name": "net-igw"
            },
            "tags_all": {
              "Name": "net-igw"
            },
            "vpc_id": "vpc-0acbe97d3a79c876c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.net-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "net-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:740956705458:network-acl/acl-095f5528d98653806",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-095f5528d98653806",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "740956705458",
            "subnet_ids": [
              "subnet-0e1a6c6030c7470ef",
              "subnet-0f47d1973a2e0b8d5"
            ],
            "tags": {
              "Name": "net-acl"
            },
            "tags_all": {
              "Name": "net-acl"
            },
            "vpc_id": "vpc-0acbe97d3a79c876c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.net-public-subnet",
            "module.vpc.aws_vpc.net-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "net-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:740956705458:route-table/rtb-0fc7adb621f7d9f3b",
            "id": "rtb-0fc7adb621f7d9f3b",
            "owner_id": "740956705458",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c00d798147fe6389",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "net-public-rt"
            },
            "tags_all": {
              "Name": "net-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0acbe97d3a79c876c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.net-igw",
            "module.vpc.aws_vpc.net-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "net-public-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076bef637bd768c1b",
            "route_table_id": "rtb-0fc7adb621f7d9f3b",
            "subnet_id": "subnet-0e1a6c6030c7470ef"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.net-igw",
            "module.vpc.aws_route_table.net-public-rt",
            "module.vpc.aws_subnet.net-public-subnet",
            "module.vpc.aws_vpc.net-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d7b9c62e4f8ad25",
            "route_table_id": "rtb-0fc7adb621f7d9f3b",
            "subnet_id": "subnet-0f47d1973a2e0b8d5"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.net-igw",
            "module.vpc.aws_route_table.net-public-rt",
            "module.vpc.aws_subnet.net-public-subnet",
            "module.vpc.aws_vpc.net-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "net-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:740956705458:subnet/subnet-0e1a6c6030c7470ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1a6c6030c7470ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "740956705458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "net-public-subnet-1"
            },
            "tags_all": {
              "Name": "net-public-subnet-1"
            },
            "vpc_id": "vpc-0acbe97d3a79c876c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.net-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:740956705458:subnet/subnet-0f47d1973a2e0b8d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f47d1973a2e0b8d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "740956705458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "net-public-subnet-2"
            },
            "tags_all": {
              "Name": "net-public-subnet-2"
            },
            "vpc_id": "vpc-0acbe97d3a79c876c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.net-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "net-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:740956705458:vpc/vpc-0acbe97d3a79c876c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0205c7fad633f99e0",
            "default_route_table_id": "rtb-0131494d2857bdfbd",
            "default_security_group_id": "sg-04d6f5b9b88b66ee1",
            "dhcp_options_id": "dopt-00689e6abe429452c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0acbe97d3a79c876c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0131494d2857bdfbd",
            "owner_id": "740956705458",
            "tags": {
              "Name": "net-vpc"
            },
            "tags_all": {
              "Name": "net-vpc"
            }
          }
        }
      ]
    }
  ]
}